# ring-libsql

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  package.ring
.github/workflows/: freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
examples/: 01_local_in_memory.ring  02_local_file.ring  03_prepared_statements.ring  04_data_types.ring  05_remote_database.ring  06_embedded_replica.ring  07_encryption.ring
src/: libsql.rh  libsql.ring
src/c_src/: ring_libsql.c
src/utils/: color.ring  install.ring  uninstall.ring
